# fastapi_react_postgres_template

./: .env  Dockerfile.backend  README.md  docker-compose.yml  pgadmin-servers.json
backend/: db.py  main.py  pyproject.toml
backend/alembic/: env.py
frontend/: Dockerfile  package-lock.json
frontend/src/: App.jsx  App.module.css
